Fix images from "Ready to go" section on mobile

--- a/src/components/StartupPage/ReadyToGo/styles.module.less
+++ b/src/components/StartupPage/ReadyToGo/styles.module.less
@@ -4,6 +4,12 @@
     font-size: 2.5rem;
     font-weight: 600;
   }
+
+  @media (max-width: 768px) {
+    h2 {
+      text-align: center;
+    }
+  }
 }
 
 .cardsWrapper {
@@ -73,15 +79,15 @@
 
   @media (max-width: 980px) {
     span {
-      font-size: 0.6875rem;
+      font-size: 0.9rem;
     }
 
     span:nth-of-type(2) {
-      font-size: 0.75rem;
+      font-size: 0.95rem;
     }
   }
 
-  @media (max-width: 680px) {
+  @media (max-width: 850px) {
     span {
       font-size: 1.6vw;
     }
@@ -93,31 +99,11 @@
 
   @media (max-width: 500px) {
     span {
-      font-size: 2.25vw;
+      font-size: 3vw;
     }
 
     span:nth-of-type(2) {
-      font-size: 2.5vw;
-    }
-  }
-
-  @media (max-width: 425px) {
-    span {
-      font-size: 0.6875rem;
-    }
-
-    span:nth-of-type(2) {
-      font-size: 0.75rem;
-    }
-  }
-
-  @media (max-width: 310px) {
-    span {
-      font-size: 3.6vw;
-    }
-
-    span:nth-of-type(2) {
-      font-size: 3.85vw;
+      font-size: 3.25vw;
     }
   }
 }
